# kiwi-ecs

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
.github/workflows/: build+test.yml
benches/: Cargo.toml
benches/src/: main.rs
internal-macros/: Cargo.toml
internal-macros/src/: lib.rs  query_gen.rs
kiwi/: Cargo.toml  README.md
kiwi/src/: arch_store.rs  archetype.rs  component.rs  entity.rs  lib.rs  query.rs  world.rs
kiwi/tests/: scenarios.rs  tests.rs
macros/: Cargo.toml  README.md
macros/src/: component.rs  entity.rs  flags.rs  lib.rs  query.rs  system.rs
uot-bench/: Cargo.toml
uot-bench/src/: main.rs
