[package]
name = "kiwi-internal-macros"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Jonas Everaert"]
description = "Internal macros for the kiwi entity component system"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
