[package]
name = "kiwi-ecs"
version = "1.3.1"
edition = "2021"
authors = ["Jonas Everaert"]
license = "MIT"
description = "A performant, small and versatile entity component system"
repository = "https://github.com/jomy10/kiwi-ecs"
keywords = ["ecs", "gamedev", "game-development", "game-dev"]
categories = ["game-development"]

[dependencies]
kiwi-internal-macros = { path = "../internal-macros", version = "1.0.5" }
kiwi-macros = { path = "../macros", version = "1.0.7" }

[features]
try = ["kiwi-macros/try"]
