[package]
name = "kiwi-macros"
version = "1.0.0"
edition = "2021"
authors = ["Jonas Everaert"]
license = "MIT"
description = "Macros for the kiwi entity component system"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["parsing", "full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
